GRAD2-2356 Incorrect error message returned with calls from TSW to GRAD - 500 vs 200