@@ -1,11 +1,11 @@
 package ca.bc.gov.educ.api.gradbusiness.service;
 
 import ca.bc.gov.educ.api.gradbusiness.model.dto.Student;
-import ca.bc.gov.educ.api.gradbusiness.util.EducGradBusinessUtil;
 import ca.bc.gov.educ.api.gradbusiness.util.EducGradBusinessApiConstants;
+import ca.bc.gov.educ.api.gradbusiness.util.EducGradBusinessUtil;
 import ca.bc.gov.educ.api.gradbusiness.util.EducGraduationApiConstants;
 import io.github.resilience4j.retry.annotation.Retry;
-import org.apache.commons.io.IOUtils;
+import jakarta.transaction.Transactional;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -19,7 +19,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.BodyInserters;
 import org.springframework.web.reactive.function.client.WebClient;
 
-import jakarta.transaction.Transactional;
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.*;
@@ -86,7 +85,9 @@ public class GradBusinessService {
         type = Optional.ofNullable(type).orElse("");
         try {
             byte[] result = webClient.get().uri(String.format(educGraduationApiConstants.getGraduateReportDataByPenUrl(), pen) + "?type=" + type).headers(h -> h.setBearerAuth(accessToken)).retrieve().bodyToMono(byte[].class).block();
-            assert result != null;
+            if(result == null) {
+                result = new byte[0];
+            }
             return handleBinaryResponse(result, "graduation_report_data.json", MediaType.APPLICATION_JSON);
         } catch (Exception e) {
             return getInternalServerErrorResponse(e);
@@ -108,7 +109,9 @@ public class GradBusinessService {
             headers.put(HttpHeaders.ACCEPT, Collections.singletonList(APPLICATION_JSON));
             headers.put(HttpHeaders.CONTENT_TYPE, Collections.singletonList(APPLICATION_JSON));
             byte[] result = webClient.post().uri(educGraduationApiConstants.getGraduateReportDataByGraduation() + "?type=" + type).headers(h -> h.addAll(headers)).body(BodyInserters.fromValue(graduationData)).retrieve().bodyToMono(byte[].class).block();
-            assert result != null;
+            if(result == null) {
+                result = new byte[0];
+            }
             return handleBinaryResponse(result, "graduation_report_data.json", MediaType.APPLICATION_JSON);
         } catch (Exception e) {
             return getInternalServerErrorResponse(e);
@@ -129,7 +132,9 @@ public class GradBusinessService {
             headers.put(HttpHeaders.ACCEPT, Collections.singletonList(APPLICATION_JSON));
             headers.put(HttpHeaders.CONTENT_TYPE, Collections.singletonList(APPLICATION_JSON));
             byte[] result = webClient.post().uri(educGraduationApiConstants.getXmlTranscriptReportData()).headers(h -> h.addAll(headers)).body(BodyInserters.fromValue(xmlRequest)).retrieve().bodyToMono(byte[].class).block();
-            assert result != null;
+            if(result == null) {
+                result = new byte[0];
+            }
             return handleBinaryResponse(result, "xml_transcript_report_data.json", MediaType.APPLICATION_JSON);
         } catch (Exception e) {
             return getInternalServerErrorResponse(e);
@@ -150,7 +155,9 @@ public class GradBusinessService {
             headers.put(HttpHeaders.ACCEPT, Collections.singletonList(APPLICATION_JSON));
             headers.put(HttpHeaders.CONTENT_TYPE, Collections.singletonList(APPLICATION_JSON));
             byte[] result = webClient.get().uri(String.format(educGradStudentApiConstants.getPenDemographicStudentApiUrl(), pen)).headers(h -> h.setBearerAuth(accessToken)).retrieve().bodyToMono(byte[].class).block();
-            assert result != null;
+            if(result == null) {
+                result = new byte[0];
+            }
             return handleBinaryResponse(result, "student_demog_data.json", MediaType.APPLICATION_JSON);
         } catch (Exception e) {
             return getInternalServerErrorResponse(e);
@@ -209,8 +216,10 @@ public class GradBusinessService {
             headers.put(HttpHeaders.ACCEPT, Collections.singletonList(APPLICATION_PDF));
             headers.put(HttpHeaders.CONTENT_TYPE, Collections.singletonList(APPLICATION_PDF));
             InputStreamResource result = webClient.get().uri(String.format(educGraduationApiConstants.getSchoolReportByMincode(), mincode,type)).headers(h -> h.setBearerAuth(accessToken)).retrieve().bodyToMono(InputStreamResource.class).block();
-            assert result != null;
-            byte[] res = IOUtils.toByteArray(result.getInputStream());
+            byte[] res = new byte[0];
+            if(result != null) {
+                res = result.getInputStream().readAllBytes();
+            }
             return handleBinaryResponse(res, EducGradBusinessUtil.getFileNameSchoolReports(mincode,year,month,type), MediaType.APPLICATION_PDF);
         } catch (Exception e) {
             return getInternalServerErrorResponse(e);
@@ -264,16 +273,13 @@ public class GradBusinessService {
             headers.put(HttpHeaders.ACCEPT, Collections.singletonList(APPLICATION_PDF));
             headers.put(HttpHeaders.CONTENT_TYPE, Collections.singletonList(APPLICATION_PDF));
             InputStreamResource result = webClient.get().uri(String.format(educGraduationApiConstants.getStudentCredentialByType(), studObj.getStudentID(),type)).headers(h -> h.setBearerAuth(accessToken)).retrieve().bodyToMono(InputStreamResource.class).block();
-            assert result != null;
-            byte[] res = IOUtils.toByteArray(result.getInputStream());
+            byte[] res = new byte[0];
+            if(result != null) {
+                res = result.getInputStream().readAllBytes();
+            }
             return handleBinaryResponse(res, EducGradBusinessUtil.getFileNameStudentCredentials(studObj.getMincode(),pen,type), MediaType.APPLICATION_PDF);
         } catch (Exception e) {
             return getInternalServerErrorResponse(e);
         }
     }
-
-
-
-
-
 }
